<resources>
    <string name="app_name">MyDoggo</string>
    <string name="slogan1" translatable="false">Welcome to MyDoggo</string>
    <string name="slogan2">Get all things that matters for you and your dog.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_home_navigation_drawer">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyDoggo</string>
    <string name="nav_header_subtitle">mydoggo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Feedback</string>
    <string name="title_activity_adoption_menu">Adoption</string>
    <string name="title_activity_breeding_menu">Breeding</string>
    <string name="title_activity_buy_or_sell_menu">Buy</string>
    <string name="title_activity_consultation_menu">Consultation</string>
    <string name="title_activity_doggopedia_menu">Doggopedia</string>
    <string name="title_activity_location_menu">Location Information</string>
    <string name="title_activity_lost_found_menu">Lost</string>
    <string name="title_activity_maps">Map</string>
    <string name="lost_amp_found"><![CDATA[LOST & FOUND]]></string>
    <string name="siberian_husky_desc">The Siberian Husky is a medium size working dog breed that originated in Northeast Asia. The breed belongs to the Spitz genetic family.</string>
    <string name="labrador_retriever_desc">The Labrador Retriever, or just Labrador, is a type of retriever-gun dog. The Labrador is one of the most popular breeds of dog in Canada, United Kingdom and United States.</string>
    <string name="beagle_desc">The beagle is a breed of small hound that is similar in appearance to the much larger foxhound. The beagle is a scent hound, developed primarily for hunting hare.</string>
    <string name="dog_sell_title1">White Brown Dog</string>
    <string name="dog_sell_description1">Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string-array name="dog_array">
        <item>Affenpinscher</item>
        <item>Afghan Hound</item>
        <item>Airedale Terrier</item>
        <item>Akita</item>
        <item>Alaskan Klee Kai</item>
        <item>Alaskan Malamute</item>
        <item>American Bulldog</item>
        <item>American English Coonhound</item>
        <item>American Eskimo Dog</item>
        <item>American Foxhound</item>
        <item>American Pit Bull Terrier</item>
        <item>American Staffordshire Terrier</item>
        <item>American Water Spaniel</item>
        <item>Anatolian Shepherd Dog</item>
        <item>Appenzeller Sennenhunde</item>
        <item>Australian Cattle Dog</item>
        <item>Australian Kelpie</item>
        <item>Australian Shepherd</item>
        <item>Australian Terrier</item>
        <item>Azawakh</item>
    </string-array>

    <string-array name="consul1">
        <item>Please select the breed of your dog…</item>
        <item>Australian Shepherd</item>
        <item>Beagle</item>
        <item>Chihuahua</item>
        <item>Dalmatian</item>
        <item>English Foxhound</item>
        <item>French Bulldog</item>
        <item>Golden Retriever</item>
        <item>Harrier</item>
        <item>Ibizan Hound</item>
        <item>Japanese Chin</item>
        <item>Korean Jindo Dog</item>
        <item>Labrador Retriever</item>
        <item>Maltipoo</item>
    </string-array>

    <string-array name="consul2">
        <item>Please select the age of your dog…</item>
        <item>1 years old</item>
        <item>2 years old</item>
        <item>3 years old</item>
        <item>4 years old</item>
        <item>5 years old</item>
        <item>6 years old</item>
        <item>7 years old</item>
        <item>8 years old</item>
        <item>9 years old</item>
        <item>10 years old</item>
    </string-array>

    <string-array name="consul3">
        <item>Please select the symptom…</item>
        <item>Aggression</item>
        <item>Anxiety</item>
        <item>Barking/howling/whining</item>
        <item>Disorientation</item>
        <item>Eating Non-food Items</item>
        <item>Growling</item>
        <item>Increased Activity</item>
        <item>Jumping</item>
        <item>Muscle Tremors</item>
        <item>Nausea</item>
    </string-array>

    <string-array name="breeding3">
        <item>Please select your preferred dog…</item>
        <item>Australian Shepherd</item>
        <item>Beagle</item>
        <item>Chihuahua</item>
        <item>Dalmatian</item>
        <item>English Foxhound</item>
        <item>French Bulldog</item>
        <item>Golden Retriever</item>
        <item>Harrier</item>
        <item>Ibizan Hound</item>
        <item>Japanese Chin</item>
        <item>Korean Jindo Dog</item>
        <item>Labrador Retriever</item>
        <item>Maltipoo</item>
    </string-array>
    <string name="title_activity_buy_page">White Brown Dog</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_favorite_adoption">Adoption</string>
    <string name="title_activity_sell_posting">Create Post</string>
    <string name="title_activity_last_found_posting">Create Post</string>
    <string name="title_activity_breeding_result">Result</string>
    <string name="title_activity_consultation_result">Result</string>
    <string name="consultation_result_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

</resources>
