<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DoggopediaMenu"
    tools:showIn="@layout/activity_doggopedia_menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dp"
        android:layout_gravity=""
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/doggopedia_card1"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp"
            android:layout_width="340dp"
            android:layout_height="450dp"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_marginBottom="258dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dog_pic1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:padding="15dp"
                    android:text="Beagle"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="238dp"
                    android:padding="15dp"
                    android:text="@string/beagle_desc"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="330dp"
                    android:padding="15dp"
                    android:text="Life span: 12 – 15 years"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="355dp"
                    android:padding="15dp"
                    android:text="Weight: M: 10–11 kg, F: 9–10 kg"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="380dp"
                    android:padding="15dp"
                    android:text="Height: M: 36–41 cm, F: 33–38 cm"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/doggopedia_card2"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp"
            android:layout_width="340dp"
            android:layout_height="450dp"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_marginBottom="258dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dog_pic3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:padding="15dp"
                    android:text="Labrador Retriever"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="238dp"
                    android:padding="15dp"
                    android:text="@string/labrador_retriever_desc"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="330dp"
                    android:padding="15dp"
                    android:text="Life span: 10 – 14 years"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="355dp"
                    android:padding="15dp"
                    android:text="Weight: M: 29–36 kg, F: 25–32 kg"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="380dp"
                    android:padding="15dp"
                    android:text="Height: M: 57–62 cm, F: 55–60 cm"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/doggopedia_card3"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            app:cardCornerRadius="4dp"
            android:layout_width="340dp"
            android:layout_height="450dp"
            android:layout_margin="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_marginBottom="258dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dog_pic4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:padding="15dp"
                    android:text="Siberian Husky"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="238dp"
                    android:padding="15dp"
                    android:text="@string/siberian_husky_desc"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="330dp"
                    android:padding="15dp"
                    android:text="Life span: 12 – 15 years"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="355dp"
                    android:padding="15dp"
                    android:text="Height: F: 50–56 cm, M: 54–60 cm"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="380dp"
                    android:padding="15dp"
                    android:text="Weight: F: 16–23 kg, M: 20–27 kg"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>